[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tracker"
version = "0.1.0"
description = "A tool for tracking cell nuclei in microscopy images"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "tifffile>=2021.7.0",
    "trackpy>=0.5.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "isort>=5.0",
]

[tool.setuptools]
package-dir = {"" = "src"} 