[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cell_tracker"
version = "0.1.0"
description = "A tool for segmenting four-cell clusters and tracking T1 transitions in microscopy images"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Cell Tracker Team"},
]
keywords = ["microscopy", "segmentation", "cellpose", "graph-analysis", "T1-transitions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "tifffile>=2021.7.0",
    "scikit-image>=0.19.0",
    "cellpose>=4.0.0",
    "networkx>=2.6.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "isort>=5.0",
    "flake8>=4.0",
    "mypy>=0.910",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true