[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cell_tracker"
version = "0.1.0"
description = "A tool for segmenting four-cell clusters and tracking T1 transitions in microscopy images"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Tianyi Cao", email = "ctyjackcao@outlook.com"},
]
dependencies = [
    "numpy",
    "matplotlib",
    "tifffile",
    "scikit-image",
    "cellpose>=4",
    "networkx",
    "scipy",
]